# VizBeats-server

./: .dockerignore  .gitattributes  .gitignore  Dockerfile  config.py  crud.py  database.py  docker-compose.yaml  main.py  models.py  pyproject.toml  requirements.txt  schemas.py
app/: aws.py  config.py  crud.py  database.py  main.py  models.py  schemas.py  ytdl.py
