[tool.poetry]
name = "vizbeats"
version = "0.1.0"
description = ""
authors = ["WooWan <woohobi@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
fastapi = "0.100.1"
uvicorn = "0.22.0"
sqlalchemy = "^2.0.19"
boto3 = "^1.28.24"
demucs = { git = "https://github.com/facebookresearch/demucs.git", branch = "main" }
psycopg2-binary = "^2.9.7"
python-multipart = "^0.0.6"
python-dotenv = "^1.0.0"


[tool.poetry.group.dev.dependencies]
black = "^23.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

